# mcp-server-EVEfleet

./: .gitignore  LICENSE  README.md  config_load.py  functions.py  pyproject.toml  requirements.txt  server.py  static_manage.py
.github/workflows/: release.yml
IO/: API_IO.py  fleet_api.py
setting/: chardict.yaml  class2ship_list.csv  shipid_list.csv  system.yaml
src/mcp_server_evefleet/: config.yaml  config_load.py  functions.py  server.py  static_manage.py
src/mcp_server_evefleet/IO/: API_IO.py  fleet_api.py
src/mcp_server_evefleet/setting/: shipid_list.csv  static.yaml
src/mcp_server_evefleet/sso/: revoke_refresh_token.py  shared_flow.py  validate_jwt.py
